<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:elevation="0dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/detail_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/tab_color"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_detail_poster"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/poster_aquaman"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/movie_poster" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:layout_collapseMode="parallax"
                app:cardBackgroundColor="@color/bg_title_poster"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/tv_detail_rating"
                    android:padding="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_rating"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                app:contentInsetStart="0dp"
                android:background="@color/tab_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_collapseMode="pin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_detail_toolbar"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="64dp"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/movies"
                        android:textColor="@color/red_700"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_detail_back"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/btn_detail_back"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_chevron_left"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/back_button" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="0dp"
                android:padding="16dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:textSize="36sp"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableStartCompat="@drawable/ic_play"
                android:drawablePadding="16dp"/>

            <TextView
                android:id="@+id/tv_detail_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dummy_text"
                android:textStyle="italic"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

            <TextView
                android:id="@+id/tv_detail_genre_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingTop="12dp"
                android:text="@string/genre"
                android:textColor="@color/red_700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_tagline" />

            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:text="@string/dummy_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre_title" />

            <TextView
                android:id="@+id/tv_detail_year_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingTop="12dp"
                android:text="@string/year"
                android:textColor="@color/red_700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

            <TextView
                android:id="@+id/tv_detail_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:text="@string/dummy_year"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_year_title" />

            <TextView
                android:id="@+id/tv_detail_overview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingTop="12dp"
                android:text="@string/overview"
                android:textColor="@color/red_700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_year" />

            <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:textSize="16sp"
                android:text="@string/dummy_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview_title" />





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>