<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.splash.SplashActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo_no_background"
        app:layout_constraintBottom_toTopOf="@+id/img_splash_logo_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stalemate"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/app_logo"
        app:layout_constraintStart_toStartOf="@+id/app_logo"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <ImageView
        android:id="@+id/img_splash_logo_company"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/ic_ichungelo_logo"
        app:layout_constraintBottom_toTopOf="@+id/tv_splash_company"
        app:layout_constraintEnd_toEndOf="@+id/tv_splash_company"
        app:layout_constraintStart_toStartOf="@+id/tv_splash_company"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_splash_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/text_company"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>