<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.fragment.movies.FavoriteMoviesFragment">

    <SearchView
        android:id="@+id/sv_favorite_movies"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_search"
        android:closeIcon="@drawable/ic_x"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/favorite_movies_hint"
        android:searchIcon="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_favorite_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/favorite_movies"
        android:textColor="@color/text_main"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_favorite_movies" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_movies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_favorite_movies"
        tools:listitem="@layout/items_result" />

    <ImageView
        android:id="@+id/img_bg_favorite_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/bg_nofavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_favorite_movies" />

    <TextView
        android:id="@+id/tv_bg_favorite_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:gravity="center"
        android:text="@string/add_movies_advice"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/img_bg_favorite_movies"
        app:layout_constraintStart_toStartOf="@+id/img_bg_favorite_movies"
        app:layout_constraintTop_toBottomOf="@+id/img_bg_favorite_movies" />

    <ProgressBar
        android:id="@+id/progress_favorite_movies"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_progress"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>