<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.FavoriteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:contentInsetStart="0dp"
        android:background="@color/tab_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_favorite_back"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_favorite_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center"
                android:text="@string/favorite"
                android:textColor="@color/text_main"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_favorite_sort"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btn_favorite_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_favorite_sort"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_sort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/sort_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/favorite_tabs"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/tab_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabIndicator="@drawable/bg_toolbar"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="?android:attr/colorBackground"
        app:tabIndicatorGravity="stretch"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/text_main"
        app:tabTextAppearance="@style/customTabTitle" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/favorite_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>